Fixed issue with gap search input

--- a/core-bc/modules/theme/src/main/webapp/css/custom.css
+++ b/core-bc/modules/theme/src/main/webapp/css/custom.css
@@ -3989,9 +3989,10 @@ a.vap-link-button:visited {
 .ie6 .vap-search-wrap input[type="text"],
 .ie7 .vap-search-wrap input[type="text"] {
 	/* Fixes issue with box overflow when setting width 100% and padding, borders, margin etc for ie6 and ie7 */
-	behavior: url(/regionportalen-theme-2/htc/boxsizing.htc);
+	behavior: url(/regionportalen2-theme/htc/boxsizing.htc);
 	padding-top: 8px;
 	padding-bottom: 8px;
+	width: 95%;
 }
 
 .vap-search-wrap input[type="submit"] {
